adding formulas functionalities on the front end, function allequationTwo added, async word added to all functions that have formulas, results presentation on frontend changed to show one or more than one results

--- a/apps/interventionFront/src/styles/globalStyles.scss
+++ b/apps/interventionFront/src/styles/globalStyles.scss
@@ -55,3 +55,7 @@ select {
   border: 1px solid $backgroundlightgray;
   width: $fullwidth - 30%;
 }
+
+input[type="checkbox"] {
+  margin-top: 20px;
+}
