--- a/apps/interventionFront/src/components/form/FormIntervention.scss
+++ b/apps/interventionFront/src/components/form/FormIntervention.scss
@@ -36,6 +36,15 @@
         font-weight: $textstrong;
       }
     }
+
+    .form__checkinputlist {
+      list-style-type: none;
+      display: flex;
+      flex-direction: row;
+      justify-content: center;
+      align-items: center;
+      padding: 20px 0px 20px 0px;
+    }
   }
 }
 
